--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,3 +6,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .center {
+    @apply flex items-center justify-center;
+  }
+  .btn-connect {
+    @apply bg-blue-500 px-4 text-[20px] hover:bg-blue-700 rounded-lg   py-2  text-black;
+  }
+  .btn-header {
+    @apply border-[1px] border-[#282b2f] text-white mr-2 bg-transparent px-4 py-2 rounded-lg hover:bg-gray-900 text-lg;
+  }
+}
